@@ -1,0 +1,9 @@
+# puppet-argus
+
+#### Table of Contents
+
+1. [Description](#description)
+
+## Description
+
+Manage the [Argus Authorization Service](https://argus-documentation.readthedocs.io/).
