@@ -1,4 +1,4 @@
-class argus::servicecert inherits params {
+class argus::servicecert inherits argus::params {
   if $service_name == $::fqnd {
     # we can use the puppet autogenerated certificate
     class {'hostcertificate::gridcertificate':}    
