@@ -9,7 +9,7 @@ centralbanning.protocol = https
 centralbanning.public = false
 
 [paps:properties]
-poll_interval = 14400
+poll_interval = <%=@poll_interval%>
 ordering = centralbanning
 ordering = default
 
