@@ -1,5 +1,5 @@
 [paps]
 
 [paps:properties]
-poll_interval = 14400
+poll_interval = <%=@poll_interval%>
 
